maj template files

--- a/templates/cours_main.tex
+++ b/templates/cours_main.tex
@@ -22,10 +22,10 @@
     \setcounter{section}{0}
     \input{../cours/chapter_1.tex}
     
-    \newpage
-    \suprasection*{Chapitre 2 --- Chapter 2 title}\label{sec:CH2}
-    \addcontentsline{toc}{suprasection}{Chapitre 2 --- Chapter 2 title}
-    \setcounter{suprasection}{2}
-    \setcounter{section}{0}
-    \input{../cours/chapter_2.tex}
+    % \newpage
+    % \suprasection*{Chapitre 2 --- Chapter 2 title}\label{sec:CH2}
+    % \addcontentsline{toc}{suprasection}{Chapitre 2 --- Chapter 2 title}
+    % \setcounter{suprasection}{2}
+    % \setcounter{section}{0}
+    % \input{../cours/chapter_2.tex}
 \end{document}
