--- a/templates/td_XX.tex
+++ b/templates/td_XX.tex
@@ -1,27 +1,15 @@
 \subsection*{Optional Sheet section 1}\label{subsec:ss_1}
 \addcontentsline{toc}{subsection}{\nameref{subsec:ss_1}}
 
-% ----- Consignes exo 1 ----- %
-\begin{td-exo}[Optional title 1] % 1
-Exercise 1 content
-\end{td-exo}
 
-% ----- Solutions exo 1 ----- %
-\iftoggle{showsolutions}{
-	\begin{td-sol}[]\ %
-		Exercice solution
-	\end{td-sol}
-}{}
+% % ----- Consignes exo xx ----- %
+% \begin{td-exo}[Optional title xx]\,\\ % xx
+% Exercise xx content
+% \end{td-exo}
 
-
-% ----- Consignes exo 2 ----- %
-\begin{td-exo}[Optional title 2] % 2
-Exercise 2 content
-\end{td-exo}
-
-% ----- Solutions exo 2 ----- %
-\iftoggle{showsolutions}{
-	\begin{td-sol}[]\ %
-		Exercice solution
-	\end{td-sol}
-}{}
+% % ----- Solutions exo xx ----- %
+% \iftoggle{showsolutions}{
+% 	\begin{td-sol}[]\,\\ % xx
+% 		Exercice solution
+% 	\end{td-sol}
+% }{}
