small update to td1 H718, to complete and modified base template for easier usability

--- a/src/HAI718I_Probas_Stats/tds/td_main.tex
+++ b/src/HAI718I_Probas_Stats/tds/td_main.tex
@@ -1,12 +1,12 @@
 \documentclass[french,a4paper,10pt]{article}
 % uncomment the following lines after copying the template
-\input{../../common/common_header.tex}
-\input{../../common/macros/math.tex}
-\input{../../common/macros/theorems.tex}
+% \input{../../common/common_header.tex}
+% \input{../../common/macros/math.tex}
+% \input{../../common/macros/theorems.tex}
 % \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
-\title{\color{astral} \sffamily \bfseries Probabilites --- TDs}
+\title{\color{astral} \sffamily \bfseries Course Name --- TDs}
 \author{Ivan Lejeune}
 \date{\today}
 
@@ -19,7 +19,7 @@
     \tableofcontents
 
     \newpage
-    \section*{TD1 --- Combinatoire et premiers calculs de probabilités}\label{sec:TD1}
+    \section*{TD1 --- First sheet title}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
