--- a/src/HAI718I_Probas_Stats/tds/td_main.tex
+++ b/src/HAI718I_Probas_Stats/tds/td_main.tex
@@ -1,8 +1,8 @@
 \documentclass[french,a4paper,10pt]{article}
 % uncomment the following lines after copying the template
-% \input{../../common/common_header.tex}
-% \input{../../common/macros/math.tex}
-% \input{../../common/macros/theorems.tex}
+\input{../../common/common_header.tex}
+\input{../../common/macros/math.tex}
+\input{../../common/macros/theorems.tex}
 % \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
