--- a/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/tds/td_1.tex
@@ -1,186 +1,84 @@
 \section{Convexité: ensembles et fonctions}\label{subsec:ss_1}
 
-% ----- Consignes exo 1 ----- %
-\begin{td-exo}[Convexité]\, % 1 
-	\begin{enumerate}
-		\item Soit une famille (éventuellement infinie) d'inégalités linéaires
-		\(a_i^T x \leq b_i,i\in I\). Soit \(C\) son ensemble de solutions.
-		Montrer que \(C\) est convexe.
+\input{../exos/exo_01.tex}
 
-		\item Montrer que la boule fermée \(\mathsf{B}(a,r)\) est convexe
-		pour tout \(a\in\bb R^n\) et \(r\in \bb R^+\).
+\input{../exos/exo_02.tex}
 
-		\item Soit \(S\subseteq\bb R^n\) et soit \(W\) l'ensemble de toutes les
-		combinaisons convexes de points de \(S\). Montrer que \(W\) est convexe.
+\input{../exos/exo_03.tex}
 
-		\item Soit \(C\) un convexe. Montrer que 
-		\begin{equation*}
-			\bigcup_{0\leq\lambda\leq 1}\lambda C
-		\end{equation*}
-		est convexe.
+\input{../exos/exo_04.tex}
 
-		\item Une matrice \(A=(a_{ij})\) de dimension \(n\times n\) est bistochastique si 
-		elle satisfait
-		\begin{equation*}
-			\begin{aligned}
-				\forall i\in\{1,\ldots,n\}, & \sum_{j=1}^n a_{ij} = 1, \\
-				\forall j\in\{1,\ldots,n\}, & \sum_{i=1}^n a_{ij} = 1, \\
-				\forall (i,j)\in{\{1,\ldots,n\}}^2, & a_{ij}\geq 0.
-			\end{aligned}
-		\end{equation*}
-		Une matrice de permutation \(P\) est une matrice bistochastique à valeurs 
-		entières, c'est-à-dire que dans chaque ligne de \(P\) il y a un et un seul élément égal à 1,
-		et les autres sont nuls. De même pour chaque colonne.
-		\begin{enumerate}
-			\item Montrer que pour toute matrice bistochastique \(A\), il existe
-			une matrice de permutation \(P\) de même dimension telle que \(p_{ij}=0\)
-			si \(a_{ij}=0\).
+\input{../exos/exo_05.tex}
 
-			\item Est-ce qu'une combinaison convexe de matrices de permutation est 
-			une matrice bistochastique?
+\input{../exos/exo_06.tex}
 
-			\item Montrer que toute matrice bistochastique \(A\) est une combinaison convexe
-			de matrices de permutation.
+\input{../exos/exo_07.tex}
 
-			\item Trouver la combinaison convexe pour la matrice \(A\) suivante:
-			\begin{equation*}
-				A = \begin{pmatrix}
-					0.15 & 0.37 & 0 & 0.48 \\
-					0.02 & 0.15 & 0.67 & 0.16 \\
-					0.46 & 0.02 & 0.16 & 0.36 \\
-					0.37 & 0.46 & 0.17 & 0
-				\end{pmatrix}.
-			\end{equation*}
-		\end{enumerate}
+\input{../exos/exo_08.tex}
 
-		\item Soient maintenant \(C_1\) et \(C_2\) deux convexes disjoints et
-		\begin{equation*}
-			D_1 = \bigcup_{0\leq\lambda\leq 1}\lambda C_1, \quad i=1,2.
-		\end{equation*}
-		Montrer que l'un des deux convexes \(C_1\cap D_2\) ou \(C_2\cap D_1\) est vide.
-	\end{enumerate}
-\end{td-exo}
+\input{../exos/exo_09.tex}
 
-% ----- Solutions exo 1 ----- %
-\iftoggle{showsolutions}{
-	\begin{td-sol}[]\ %
-		A remplir %TODO solve exercise 1
-	\end{td-sol}
-}{}
+\input{../exos/exo_10.tex}
 
+\input{../exos/exo_11.tex}
 
-% ----- Consignes exo 2 ----- %
-\begin{td-exo}[Combinaison convexe]\, % 2
-	\begin{enumerate}
-		\item Rappeler la définition d'une combinaison convexe.
-		\item Est-ce que le point \(A\) de coordonnées \((1,1,1)\) est une combinaison convexe
-		des points \((2,2,0), (0,0,3), (0,0,0)\)?
-		\item Déterminer si le point de coordonnées \((0,7)\) est une combinaison convexe
-		des points \((3,6),(-6,9),(2,1),(-1,1)\).
-		\item Déterminer graphiquement si le point de coordonnées \((1,2)\) est une combinaison
-		convexe des points \((1,1)\) et \((2,-1)\).
-	\end{enumerate}
-\end{td-exo}
+\input{../exos/exo_12.tex}
 
-% ----- Solutions exo 2 ----- %
-\iftoggle{showsolutions}{
-	\begin{td-sol}[]\ %
-		\begin{enumerate}
-			\item Une combinaison convexe de points \(x_1, x_2, \ldots, x_k\) est une combinaison
-			\begin{equation*}
-				\sum_{i=1}^k \lambda_i x_i
-			\end{equation*}
-			avec \(\lambda_i \geq 0\) et \(\sum_{i=1}^k \lambda_i = 1\).
+\input{../exos/exo_13.tex}
 
-			\item On cherche \(\lambda_1, \lambda_2, \lambda_3 \geq 0\) tels que
-			\begin{equation*}
-				\lambda_1 (2,2,0) + \lambda_2 (0,0,3) + \lambda_3 (0,0,0) = (1,1,1).
-			\end{equation*}
-			Ici on voit que \((\lambda1, \lambda_2, \lambda_3) = (0.5, 1/3, 0)\) est une solution.
+\input{../exos/exo_14.tex}
 
-			\item On cherche \(\lambda_1, \lambda_2, \lambda_3, \lambda_4 \geq 0\) tels que
-			\begin{equation*}
-				\lambda_1 (3,6) + \lambda_2 (-6,9) + \lambda_3 (2,1) + \lambda_4 (-1,1) = (0,7).
-			\end{equation*}
-			Cela revient à résoudre le système suivant:
-			\begin{equation*}
-				\begin{cases}
-					3\lambda_1 - 6\lambda_2 + 2\lambda_3 - \lambda_4 = 0 \\
-					6\lambda_1 + 9\lambda_2 + \lambda_3 + \lambda_4 = 7 \\
-					\lambda_1 + \lambda_2 + \lambda_3 + \lambda_4 = 1
-				\end{cases}
-			\end{equation*}
-			En résolvant on obtient la famille de solutions:
-			\begin{equation*}
-				\lambda_1 = \frac t2 + \frac 23,\quad
-				\lambda_2 = \frac 13 + \frac {5t}{16},\quad
-				\lambda_3 = \frac{-19t}{16},\quad
-				\lambda_4 = t
-			\end{equation*}
-			avec \(t\in\bb R\). En imposant \(\lambda_i \geq 0\) on trouve \(t=0\) et donc
-			\((\lambda_1, \lambda_2, \lambda_3, \lambda_4) = (2/3, 1/3, 0, 0)\).
+\input{../exos/exo_15.tex}
 
-			\item Graphiquement, on voit que le point \((1,2)\) n'est pas sur le segment
-			entre les points \((1,1)\) et \((2,-1)\). Donc ce n'est pas une combinaison convexe:
+\input{../exos/exo_16.tex}
 
-			\begin{center}
-				\begin{tikzpicture}[scale=1, font=\small]
-					% coordinates
-					\coordinate (A) at (1,1);
-					\coordinate (B) at (2,-1);
-					\coordinate (P) at (1,2);
+\input{../exos/exo_17.tex}
 
-					% light grid
-					\draw[step=1cm, very thin, gray!20] (-1,-2) grid (3,3);
+\input{../exos/exo_18.tex}
 
-					% axes
-					\draw[->, thin, gray!60] (-1,0) -- (3,0) node[right] {\(x\)};
-					\draw[->, thin, gray!60] (0,-2) -- (0,3) node[above] {\(y\)};
+\input{../exos/exo_19.tex}
 
-					% segment AB
-					\draw[thick] (A) -- (B) node[midway, below right=1pt] {};
+\input{../exos/exo_20.tex}
 
-					% points
-					\fill (A) circle (2pt) node[below left=2pt] {};
-					\fill (B) circle (2pt) node[below right=2pt] {};
-					\fill (P) circle (2pt) node[above left=2pt] {};
-				\end{tikzpicture}
-			\end{center}
-		\end{enumerate}
-	\end{td-sol}
-}{}
+\input{../exos/exo_21.tex}
 
+\input{../exos/exo_22.tex}
 
-% ----- Consignes exo 3 ----- %
-\begin{td-exo}[Ensembles convexe]\,\\ % 3
-	Montrer qu'étant donné un sous-ensemble convexe \(C\) et deux réels positifs \(\alpha\) et \(\beta\)
-	alors on a
-	\begin{equation*}
-		\alpha C + \beta C = (\alpha + \beta) C.
-	\end{equation*}
-\end{td-exo}
+\input{../exos/exo_23.tex}
 
-% ----- Solutions exo 3 ----- %
-\iftoggle{showsolutions}{
-	\begin{td-sol}[]\ %
-		Commencons par montrer l'inclusion \(\left(\alpha + \beta\right) C \subset \alpha C + \beta C\).
+\input{../exos/exo_24.tex}
 
-		Soit \(x \in \left(\alpha + \beta\right) C\). Alors, il existe \(x_0\in C\) tel que
-		\begin{equation*}
-			x = \left(\alpha + \beta\right) x_0 = \alpha x_0 + \beta x_0.
-		\end{equation*}
-		
-		Donc \(x \in \alpha C + \beta C\).
+\input{../exos/exo_25.tex}
 
-		Montrons maintenant l'inclusion \(\alpha C + \beta C \subset \left(\alpha + \beta\right) C\).
+\input{../exos/exo_26.tex}
 
-		Soit \(x \in \alpha C + \beta C\). Alors, il existe \(x_1, x_2 \in C\) tels que
-		\begin{equation*}
-			x = \alpha x_1 + \beta x_2 = \left(\alpha + \beta\right) \left(\frac{\alpha}{\alpha + \beta} x_1 + \frac{\beta}{\alpha + \beta} x_2\right).
-		\end{equation*}
-	\end{td-sol}
-}{}
+\input{../exos/exo_27.tex}
 
+\input{../exos/exo_28.tex}
+
+\input{../exos/exo_29.tex}
+
+\input{../exos/exo_30.tex}
+
+\input{../exos/exo_31.tex}
+
+\input{../exos/exo_32.tex}
+
+\input{../exos/exo_33.tex}
+
+\input{../exos/exo_34.tex}
+
+\input{../exos/exo_35.tex}
+
+\input{../exos/exo_36.tex}
+
+\input{../exos/exo_37.tex}
+
+\input{../exos/exo_38.tex}
+
+\input{../exos/exo_39.tex}
+
+% \input{../exos/exo_40.tex}
 
 % ----- Consignes exo 4 ----- %
 \begin{td-exo}[Ensembles convexes]\,\\ % 4
