maj RO refactor

--- a/src/HAI711I_Graphes_Structures/dms/dm_main.tex
+++ b/src/HAI711I_Graphes_Structures/dms/dm_main.tex
@@ -19,6 +19,10 @@
     
     \setcounter{tdcounter}{0}
     \input{./dm_1.tex}
+    
+
+    \setcounter{tdcounter}{0}
+    \input{./dm_2.tex}
 
 \end{document}
 
