--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -218,6 +218,8 @@ soit en déposant votre devoir durant le cours
         car on peut toujours en trouver un plus grand. Donc
         il n'y a pas un unique couple \((x_1, x_2)\) qui maximise \(z\).
 
+        \item Résolvons maintenant le problème \(P_\theta\) par la méthode à deux phases.
+
     \end{enumerate}
 \end{td-sol}
 
