--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -38,6 +38,12 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_5.tex}
 
+
+    \newpage
+    \section{TD7}\label{sec:TD7}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_7.tex}
+
     \newpage
     \section{Examen Blanc}\label{sec:Examen_Blanc}
     \setcounter{tdcounter}{0}
