--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -34,9 +34,19 @@
     \input{../tds/td_3.tex}
 
     \newpage
+    \section{TD4}\label{sec:TD4}
+    \setcounter{tdcounter}{0}
+    %\input{../tds/td_4.tex}
+
+    \newpage
     \section{TD5}\label{sec:TD5}
     \setcounter{tdcounter}{0}
     \input{../tds/td_5.tex}
+
+    \newpage
+    \section{TD6}\label{sec:TD6}
+    \setcounter{tdcounter}{0}
+    %\input{../tds/td_6.tex}
 
 
     \newpage
