updated graph exercices

--- a/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_9_2.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_9_2.tex
@@ -1,6 +1,6 @@
 % Figure 1
 \ffigbox[\FBwidth]{%
-\label{Fig:td2ex9c2}
+\label{Fig:td2ex9p2}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, every node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=4mm}]
@@ -18,13 +18,13 @@
             \node (5) at (4, 0) {\(5\)};
             \node (6) at (5, 0) {\(6\)};
 
-            \draw[red] (a) -- (1);
+            \draw (a) -- (1);
             \draw (a) -- (2);
 
-            \draw (b) -- (1);
+            \draw[red] (b) -- (1);
             \draw (b) -- (4);
             \draw (b) -- (5);
-            \draw[red] (b) -- (6);
+            \draw (b) -- (6);
             
             \draw[red] (c) -- (2);
             \draw (c) -- (3);
