--- a/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_9_1.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_9_1.tex
@@ -1,6 +1,6 @@
 % Figure 1
 \ffigbox[\FBwidth]{%
-\label{Fig:td2ex9c1}
+\label{Fig:td2ex9p1}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, every node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=4mm}]
@@ -18,11 +18,11 @@
             \node (5) at (4, 0) {\(5\)};
             \node (6) at (5, 0) {\(6\)};
 
-            \draw[red] (a) -- (1);
+            \draw (a) -- (1);
             \draw (a) -- (2);
 
-            \draw (b) -- (1);
-            \draw[red] (b) -- (4);
+            \draw[red] (b) -- (1);
+            \draw (b) -- (4);
             \draw (b) -- (5);
             \draw (b) -- (6);
             
@@ -33,7 +33,7 @@
             \draw (d) -- (4);
             
             \draw (e) -- (4);
-            \draw (e) -- (5);
+            \draw[red] (e) -- (5);
             
             \draw (f) -- (5);
         \end{tikzpicture}
