small maj td tex graph content

--- a/src/HAI711I_Graphes_Structures/tds/td_main.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_main.tex
@@ -31,13 +31,13 @@
     \setcounter{section}{2}
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
-
-    % \newpage
-    % \section*{TD3 --- Flots et circulation}\label{sec:TD3}
-    % \addcontentsline{toc}{section}{\nameref{sec:TD3}}
-    % \setcounter{section}{3}
-    % \setcounter{tdcounter}{0}
-    % \input{../tds/td_3.tex}
+    
+    \newpage
+    \section*{TD3 --- Flots et circulation}\label{sec:TD3}
+    \addcontentsline{toc}{section}{\nameref{sec:TD3}}
+    \setcounter{section}{3}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_3.tex}
 
 \end{document}
 
