added tmp exam graphs

--- a/src/HAI711I_Graphes_Structures/tds/td_main.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_main.tex
@@ -39,5 +39,12 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
 
+    \newpage
+    \section*{Examen blanc}\label{sec:ExamBlanc}
+    \addcontentsline{toc}{section}{\nameref{sec:ExamBlanc}}
+    \setcounter{section}{4}
+    \setcounter{tdcounter}{0}
+    \input{../tds/exam_blanc.tex}
+
 \end{document}
 
