maj exam blanc graphes

--- a/src/HAI711I_Graphes_Structures/assets/tikz/exam_blanc_ex_1_1.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/exam_blanc_ex_1_1.tex
@@ -27,11 +27,11 @@
 
             \draw[-{Stealth}] (c) -- node[below] {\(1\)} (f);
 
-            \draw[-{Stealth}] (d) -- node[above right] {\(2\)} (b);
+            \draw[-{Stealth}] (d) -- node[right] {\(2\)} (b);
             \draw[-{Stealth}] (d) -- node[above right] {\(3\)} (p);
 
             \draw[-{Stealth}] (e) -- node[right] {\(9\)} (c);
-            \draw[-{Stealth}] (e) -- node[below right] {\(9\)} (p);
+            \draw[-{Stealth}] (e) -- node[above] {\(9\)} (p);
 
             \draw[-{Stealth}] (f) -- node[below right] {\(1\)} (p);
         \end{tikzpicture}
