--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -49,14 +49,20 @@
     %\input{../tds/td_6.tex}
 
 
+    \setcounter{section}{0}
+
+    \newpage
+    \section{Examen Blanc}\label{sec:Examen_Blanc}
+    \setcounter{tdcounter}{0}
+    \input{../tds/examen_blanc.tex}
     \newpage
     \section{TD7}\label{sec:TD7}
     \setcounter{tdcounter}{0}
     \input{../tds/td_7.tex}
 
     \newpage
-    \section{Examen Blanc}\label{sec:Examen_Blanc}
+    \section{TD8}\label{sec:TD8}
     \setcounter{tdcounter}{0}
-    \input{../tds/examen_blanc.tex}
+    \input{../tds/td_8.tex}
 \end{document}
 
